Fix server header overflow

--- a/app/assets/stylesheets/homepage/server_channel.scss
+++ b/app/assets/stylesheets/homepage/server_channel.scss
@@ -30,6 +30,8 @@
     margin-left: 15px;
     font-size: 16px;
     font-weight: 500;
+    max-width: 180px;
+    overflow: auto;
   }
 
   .fa {
